Ran linter and fixed some bugs/security issues/upgraded packages. Made a single adUnit that can be included in all views so it looks the same everywhere

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_dashboard">Activities</string>
     <string name="title_notifications">Lunch Menu</string>
 
-    <string name="sample_ad">Loading...</string>
+    <string name="sample_ad">Loading…</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_grades_fragment">Hello grades fragment</string>
